[workspace]
members = ["profiler-rt", "profdata"]

[package]
name = "cargo-pgo"
version = "0.1.0"
authors = ["Vadim Chugunov <vadimcn@gmail.com>"]

[features]
llvm-profdata = ["profdata/disable"] 

[[bin]]
name = "cargo-pgo"
path = "src/main.rs"

[dependencies]
profiler-rt = { path = "profiler-rt" }
profdata = { path = "profdata" }
