[package]
name = "profdata"
version = "0.1.0"
authors = ["Vadim Chugunov <vadimcn@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pgo", "cargo", "profile"]

build = "build.rs"

[build-dependencies]
cmake = "^0.1"
gcc = "^0.3"
cpp = { version = "0.1.0", features = ["build"] }

[dependencies]
cpp = { version = "0.1.0", features = ["macro"] }
